--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ table td {
         </div>
         <div class="nav-right">
             <p>Pelumi Amao</p>
-            <img src="smile.avif" alt="Profile Pic">
+            <!--<img src="smile.avif" alt="Profile Pic">-->
         </div>
     </nav>
     <div class="top">
